--- a/css/price-calc.css
+++ b/css/price-calc.css
@@ -12,3 +12,45 @@
       font-size: 3.5rem;
     }
   }
+
+  /* --- slider --- */
+
+  .slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 25px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #5C37DC;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #5C37DC;
+    cursor: pointer;
+  }
+
+.rangecontainer {
+  margin: 3rem 0;
+}
+
+  .quality-container {
+    display: flex;
+    justify-content: space-between;
+  }
